Se realizo una modificacion en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-aqui esta index
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <p>Este es mi primer commit con Git <p>
+      <p>Este es mi segundo commit con Git <p>
+  </body>
+</html>
