Se agrego el archivo git ignore

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <p>Este es mi primer commit con Git <p>
+    <p>Este es mi ler commit con Git <p>
       <p>Este es mi segundo commit con Git <p>
   </body>
 </html>
