--- a/productos.html
+++ b/productos.html
@@ -6,8 +6,8 @@
   </head>
   <body>
 <p> Cambio en rama develeop ,</p>
-<p> Cambio en rama <main>
-  
+<p> Cambio en rama <p>
+
 </main> ,</p>
   </body>
 </html>
